--- a/examples/templates/feed.html
+++ b/examples/templates/feed.html
@@ -16,7 +16,7 @@
 <link rel="mask-icon" type="" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 
 
-  <title>CodePen - Simple Comments Section Template</title>
+  <title>Hot Topics</title>
   
   
   
@@ -218,8 +218,7 @@ function modalPost(){
 }
   
 let createModal = (modalContent) => {  
-	alert(isReply);
-  
+	
   // Definitions
   let modal = document.createElement("div"),
       modalStyle = document.createElement("style"),
