fix chat, feed html and readme

--- a/examples/templates/chat.html
+++ b/examples/templates/chat.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
  
-        <title>Tuts+ Chat Application</title>
+        <title>Hot Chat Application</title>
         <meta name="description" content="Tuts+ Chat Application" />
         
         
