--- a/examples/templates/chat.html
+++ b/examples/templates/chat.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
  
         <title>Hot Chat Application</title>
-        <meta name="description" content="Tuts+ Chat Application" />
+        <meta name="description" content="Hot Chat Application" />
         
         
     <style>
@@ -176,17 +176,18 @@
         </div>
         
         <script> 
-			// socket stuff
+			// socket stuff			
 			let _id =  Math.round(Math.random()*1000000);
         	var sock = new WebSocket("ws://localhost:18080/ws?_id="
                                  + _id);
 
-			// receiving events
 			
 			sock.onopen = ()=>{
 			    console.log('open');
 			    // join room
 			    sock.send('{"join":"testroom", "notifyjoin":true, "notifyleave":true}');
+			    
+			    sock.send('{"getkeys":"testroom_*"}');
 			    
 			    document.getElementById("me").innerHTML = "user_" + _id;
 			}
@@ -206,35 +207,45 @@
 				var from = "";
 				var data = "";
 				
-				if(msg["joined"]){
-					room = msg.joined;
-					from = msg.from
-					data = " I am online!";
-					
-				}else if(msg["left"]){
-					room = msg.left;
-					from = msg.from;
-					data = " I went offline!";
-					
-				}else if(msg["data"]){
-					room = msg.room;
-					from = msg.from;
-					data = msg.data;
-					
-				}else if(msg["userlist"]){
-					room = msg.room;
-					data = msg.userlist;
-					from = "system";
-				}
-				var d = new Date();
-			    
-				let chatBoxArea = document.getElementById("chatbox");
-			    var node = document.createElement("div");
-			    node.className = "msgln";
-				node.innerHTML = '<span class="chat-time">' + d.toLocaleTimeString() + '</span>' +  
-					'<b class="user-name">user_' + from + ' (' + room + ')</b>' + data + '<br/>';
+				var msgLines = [{}];
 				
-				chatBoxArea.appendChild(node);    
+				msgLines[0].value = msg;
+				
+				if(msg["joined"]){
+					msgLines[0].value.room = msg.joined;
+					msgLines[0].value.message = " I am online!";
+										
+				}else if(msg["left"]){
+					msgLines[0].value.room = msg.left;
+					msgLines[0].value.message = " I went offline!";
+					
+				}else if(msg["message"]){
+					console.log("message received: " + msg);
+					
+				}else if(msg["replyuserlist"]){
+					msgLines[0].value.from = "system";
+					msgLines[0].value.message = msg.replyuserlist;
+					
+				}else if(msg["replygetkeys"]){
+					msgLines = msg.replygetkeys;
+				}
+				
+				for(i = 0; i < msgLines.length; i++){
+					var msgLine = msgLines[i];
+					room = msgLine.value.room;
+					from = msgLine.value.from;
+					data = msgLine.value.message;
+					
+					var d = new Date(parseInt(msgLine.value.timestamp, 0));
+					let chatBoxArea = document.getElementById("chatbox");
+				    var node = document.createElement("div");
+				    node.className = "msgln";
+					node.innerHTML = '<span class="chat-time">' + d.toLocaleTimeString() + '</span>' +  
+						'<b class="user-name">user_' + from + ' (' + room + ')</b>' + data + '<br/>';
+					
+					chatBoxArea.appendChild(node); 
+				}
+				
 			}
 			
 			// sending messages
@@ -258,7 +269,10 @@
 				
 				var msg = {};
 				msg.room = "testroom";
+				
 				msg.send = usrmsg;
+				
+				msg.key = msg.room + "_" + _id; //specifying a key saves msg.send along with meta data as Value in Quarks against that key
 				
 				var m = JSON.stringify(msg);
 				console.log(m);
@@ -272,7 +286,7 @@
 			function listusers(){
 				
 				var msg = {};
-				msg.list = "testroom";
+				msg.userlist = "testroom";
 				msg.skip = 0;
 				msg.limit = -1;
 				
